# connector-dummy-with-tests

./: Dockerfile  README.md  application.py  docker-entrypoint.sh  package.json  pyproject.toml  routes.py  settings.py  settings_kube.py  setup.sh  setup_poetry.sh  tasks.py
app/: controllers.py  error.py  exceptions.py  log.py  middlewares.py  request_args.py  responses.py  services.py  standards.py
app/kube_settings/: __init__.py  validators.py
app/pytest_fixtures/: __init__.py
app/request_args/: __init__.py  fields.py
app/tests/: conftest.py
app/tests/snapshots/: snap_test_controllers.py
docs/: api.raml
docs/common/headers/: data-product-sensor-headers.yaml
docs/common/types/: data-product-output-sensor.yaml  data-product-parameters-sensor.yaml
docs/common/types/examples/: data-product-output-sensor-422.yaml  data-product-output-sensor.json  data-product-parameters-sensor.json
robottests/: README.md  envvars  new-robots-secrets-test.bat
robottests/lib/: PoTLib.py
robottests/result/: log.html  output.xml  report.html
robottests/tests/: dummy_connector.robot
robottests/variables/: brokercommon.robot  dummy_variables.robot  standards_ontology.robot
